# diploma

./: .clang-format  .gitmodules  Balancer  CMakeLists.txt  Client  Server  codestyle.sh  create_clients.sh  main.cpp
balancer/: CMakeLists.txt  balancer.cpp  balancer.h  main.cpp  statistic.h
client/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  main.cpp
sample/: colors.h  cpu_usage.h  json_reader.h  settings.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
testing/: test_settings.json
